--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<a href:"https://github.com/Kickrop/banners_public/tree/main/lukoshko_240_400/index.html"
+<a href:"https://github.com/Kickrop/banners_public/tree/main/lukoshko_240_400/index.html">
