--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <div>
-<a href="https://github.com/Kickrop/banners_public/tree/main/lukoshko_240_400/index.html"></a>
+<a href="https://github.com/Kickrop/banners_public/tree/main/lukoshko_240_400/index.html">lukoshko</a>
 </div>
 <a href="https://www.google.com/imgres?imgurl=https%3A%2F%2Finteractive-examples.mdn.mozilla.net%2Fmedia%2Fcc0-images%2Fgrapefruit-slice-332-332.jpg&imgrefurl=https%3A%2F%2Fdeveloper.mozilla.org%2Fen-US%2Fdocs%2FWeb%2FHTML%2FElement%2Fimg&tbnid=A4G7eW2zetaunM&vet=12ahUKEwj54eO2p4jxAhWHsyoKHZGhCwUQMygAegUIARDQAQ..i&docid=l3NoP295SYrYvM&w=332&h=332&q=image&safe=strict&ved=2ahUKEwj54eO2p4jxAhWHsyoKHZGhCwUQMygAegUIARDQAQ"></a>
