--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <div>
-<a href="/banners_public/lukoshko_240_400/index.html" target='_blank'>lukoshko</a>
+<a href="/banners_public/lukoshko_240_400/index.html" target="_blank">lukoshko</a>
 </div>
