--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <div>
-<a href="/banners_public/lukoshko_240_400/index.html" target="_blank">lukoshko</a>
+<a href="/banners_public/lukoshko_240_400/index.html" target="_blank">lukoshko</a><br>
+<a href="/banners_public/uralsib_240_400/index.html" target="_blank">uralsib</a>
 </div>
