--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
+<h1>Для корректной работы следует отключить блокировщики рекламы </h1>
 <div>
-<a href="/banners_public/lukoshko_240_400/index.html" target="_blank">lukoshko</a><br>
-<a href="/banners_public/uralsib_240_400/index.html" target="_blank">uralsib</a>
+  <a href="/banners_public/lukoshko_240_400/index.html" target="_blank">lukoshko</a><br>
+  <a href="/banners_public/uralsib_240_400/index.html" target="_blank">uralsib</a><br>
+  <a href="/banners_public/bpsb_240_400/index.html" target="_blank">bpsb</a><br>
+  <a href="/banners_public/energizer_240_400/index.html" target="_blank">energizer</a><br>
+  <a href="/banners_public/gazprom_240_400/index.html" target="_blank">gazprom</a><br>
+  <a href="/banners_public/lada_240_400/index.html" target="_blank">lada</a><br>
+  <a href="/banners_public/mega_240_400/index.html" target="_blank">mega</a><br>
+  <a href="/banners_public/presnya_100_250/index.html" target="_blank">presnya</a><br>
+  <a href="/banners_public/pyaterochka_300_250/index.html" target="_blank">pyaterochka</a><br>
+  <a href="/banners_public/trekrezan_240_400/index.html" target="_blank">trekrezan</a><br>
 </div>
